redirect error stream to reduce the # of threads.
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@5739 71c3de6d-444a-0410-be80-ed276b4c234a